--- a/css/style.css
+++ b/css/style.css
@@ -266,23 +266,36 @@ footer {
   padding-bottom: 30px;
 }
 
-.doctors-one div h3 {
+.doctors-one div div button {
   background-color: rgb(105, 203, 106);
   border: 1px solid rgb(172, 169, 169);
   height: 35px;
-  line-height: 35px;
+  width: 100%;
+  font-weight: bold;
+  text-align: left;
+  font-size: 20px;
+  cursor: pointer;
   padding-left: 25px;
+  margin-bottom: 1rem;
 }
 
-.doctors-one div div {
+.doctors-one div div div {
   border: 1px solid rgb(172, 169, 169);
   background-color: none;
-  margin: 8px 0;
+  margin: 8px 0 1.4rem;
   padding: 25px 25px;
 }
 
 .doctors-one div ul li {
   margin-left: 20px;
+}
+
+.article-text {
+  display: none;
+}
+
+.show-text .article-text {
+  display: block;
 }
 
 /* Services Page */
@@ -473,7 +486,7 @@ footer {
 
 .contact {
   width: 100%;
-  height: 1100px;
+  height: 1150px;
   background: white;
   display: flex;
   justify-content: center;
@@ -576,8 +589,8 @@ aside p {
 }
 
 .appointment form input,
-select,
-textarea {
+.appointment form select,
+.appointment form textarea {
   color: rgb(172, 169, 169);
   font-size: 15px;
   width: 500px;
